# scalable_multiparty_garbling

./: CMakeLists.txt  README.md
microbenchmarks/: CMakeLists.txt  add_gf2e.cpp  comm_runner.cpp  communication.py  computation.py  ecc_gf2e.cpp  mult_gf2e.cpp  precon_gf2e.cpp  utils.cpp  utils.hpp
scripts/: average_communication.py  run_parties.sh
src/: CMakeLists.txt
src/io/: netmp.cpp  netmp.hpp
test/: CMakeLists.txt  io.cpp
